nginx/nginx-prometheus.yaml
---
# Service for data from prometheus exporters for nginx ingress
apiVersion: v1
kind: Service
metadata:
  name: nginx-prometheus
spec:
  selector:
    prometheus: nginx-prometheus
  ports:
  - name: web
    port: 9090
    protocol: TCP
    targetPort: web
  type: NodePort
